@@ -11,7 +11,7 @@ import org.xml.sax.SAXException;
 
 import java.io.IOException;
 
-import static org.custommonkey.xmlunit.XMLAssert.assertXMLEqual;
+import static org.xmlunit.assertj3.XmlAssert.assertThat;
 
 public class CsvToXmlComponentTest extends CamelTestSupport {
 
@@ -38,95 +38,65 @@ public class CsvToXmlComponentTest extends CamelTestSupport {
         };
     }
 
-
     @Test
     public void testCsvWithHeaders() throws IOException, SAXException {
         template.sendBody("direct:testWithHeaders", csvWithHeader);
 
-        Exchange result = getMockEndpoint("mock:outWithHeaders").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:outWithHeaders").getExchanges().getFirst();
 
         String expected = getExpectedXml();
         String actual = result.getIn().getBody(String.class);
 
         XMLUnit.setIgnoreWhitespace(true);
-        assertXMLEqual(expected,actual);
+
+        assertThat(actual).and(expected).areIdentical();
 
     }
-
-
-
-    /*
-    @Test
-    public void testCsvWithoutHeaders() throws IOException, SAXException {
-        template.sendBody("direct:testWithoutHeader", csvWithoutHeader);
-
-        Exchange result = getMockEndpoint("mock:testWithoutHeader").getExchanges().get(0);
-
-        String expected = getExpectedXmlWithoutHeaders();
-        String actual = result.getIn().getBody(String.class);
-
-        XMLUnit.setIgnoreWhitespace(true);
-        assertXMLEqual(expected,actual);
-
-    }
-
-    @Test
-    public void testCsvWithHeadersIncludingInvalidCharacters() throws IOException, SAXException {
-        template.sendBody("direct:testWithHeaders", csvWithHeaderIncludingInvalidCharacters);
-
-        Exchange result = getMockEndpoint("mock:outWithHeaders").getExchanges().get(0);
-
-        String expected = getExpectedXmlHeadersWithInvalidCharacters();
-        String actual = result.getIn().getBody(String.class);
-
-        XMLUnit.setIgnoreWhitespace(true);
-        assertXMLEqual(expected,actual);
-
-    }
-
-     */
 
     private String getExpectedXml() {
-        return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<items>\n" +
-                "  <item>\n" +
-                "    <Leeftijd>21</Leeftijd>\n" +
-                "    <Voornaam>Koen</Voornaam>\n" +
-                "    <Achternaam>Castermans</Achternaam>\n" +
-                "  </item>\n" +
-                "  <item>\n" +
-                "    <Leeftijd>30</Leeftijd>\n" +
-                "    <Voornaam>Jaap</Voornaam>\n" +
-                "    <Achternaam>Aap</Achternaam>\n" +
-                "  </item>\n" +
-                "</items>";
+        return """
+                <?xml version="1.0" encoding="UTF-8"?>
+                <items>
+                  <item>
+                    <Leeftijd>21</Leeftijd>
+                    <Voornaam>Koen</Voornaam>
+                    <Achternaam>Castermans</Achternaam>
+                  </item>
+                  <item>
+                    <Leeftijd>30</Leeftijd>
+                    <Voornaam>Jaap</Voornaam>
+                    <Achternaam>Aap</Achternaam>
+                  </item>
+                </items>""";
     }
 
     private String getExpectedXmlWithoutHeaders() {
-        return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<items>\n" +
-                "  <item>\n" +
-                "    <string>Koen</string>\n" +
-                "    <string>Castermans</string>\n" +
-                "    <string>21</string>\n" +
-                "  </item>\n" +
-                "  <item>\n" +
-                "    <string>Jaap</string>\n" +
-                "    <string>Aap</string>\n" +
-                "    <string>30</string>\n" +
-                "  </item>\n" +
-                "</items>";
+        return """
+                <?xml version="1.0" encoding="UTF-8"?>
+                <items>
+                  <item>
+                    <string>Koen</string>
+                    <string>Castermans</string>
+                    <string>21</string>
+                  </item>
+                  <item>
+                    <string>Jaap</string>
+                    <string>Aap</string>
+                    <string>30</string>
+                  </item>
+                </items>""";
     }
 
     private String getExpectedXmlHeadersWithInvalidCharacters(){
-        return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<items>\n" +
-                "  <item>\n" +
-                "    <naam>iPhone</naam>\n" +
-                "    <order1nummer>1</order1nummer>\n" +
-                "    <prijs>800</prijs>\n" +
-                "  </item>\n" +
-                "</items>";
+        return """
+                <?xml version="1.0" encoding="UTF-8"?>
+                <items>
+                  <item>
+                    <naam>iPhone</naam>
+                    <order1nummer>1</order1nummer>
+                    <prijs>800</prijs>
+                  </item>
+                </items>""";
     }
 
 
