@@ -48,7 +48,7 @@ public class Parser {
 			try {
 				ret = (ParseInfo) super.clone();
 			}
-			catch (CloneNotSupportedException e) {
+			catch (CloneNotSupportedException _) {
 				//won't happen
 			}
 			return ret;
@@ -187,7 +187,7 @@ public class Parser {
 				parent = parent.getParent();
 			}
 
-			String lineLoc = String.format( "Line %d column %d (offset 0x%x): ", position.getLine(), position.getColumn() + 1, position.getPosition() );
+			String lineLoc = "Line %d column %d (offset 0x%x): ".formatted(position.getLine(), position.getColumn() + 1, position.getPosition());
 			location = lineLoc + location;
 			
 			switch ( mParser.getErrorSettings()[error.ordinal()] )
@@ -340,7 +340,7 @@ public class Parser {
 				parent = parent.getParent();
 			}
 
-			String lineLoc = String.format( "Line %d column %d (offset 0x%x): ", position.getLine(), position.getColumn() + 1, position.getPosition() );
+			String lineLoc = "Line %d column %d (offset 0x%x): ".formatted(position.getLine(), position.getColumn() + 1, position.getPosition());
 			location = lineLoc + location;
 
 			LOG.warn("Warning: " + location + ": " + message);
@@ -369,21 +369,21 @@ public class Parser {
 
 		String getX12DataElementErrorCode( ErrorType error )
 		{
-			switch( error )
+			return switch( error )
 			{
-				case MissingFieldOrComposite : return "1";
-				case ExtraData : return "3";
-				case ExtraRepeat : return "3";
-				case DataElementTooShort : return "4";
-				case DataElementTooLong : return "5";
-				case FieldValueInvalid : return "6";
-				case CodeListValueWrong : return "7";
-				case InvalidDate: return "8";
-				case InvalidTime: return "9";
-				case SemanticWrong: return "10";
-				case UsingNotUsed: return "I10";
-				default : return "1";
-			}
+				case MissingFieldOrComposite  -> "1";
+				case ExtraData  -> "3";
+				case ExtraRepeat  -> "3";
+				case DataElementTooShort  -> "4";
+				case DataElementTooLong  -> "5";
+				case FieldValueInvalid  -> "6";
+				case CodeListValueWrong  -> "7";
+				case InvalidDate -> "8";
+				case InvalidTime -> "9";
+				case SemanticWrong -> "10";
+				case UsingNotUsed -> "I10";
+				default  -> "1";
+			};
 		}
 
 		public EDISemanticValidator getValidator()
