@@ -14,7 +14,7 @@ import java.io.InputStream;
 
 public class AttachmentEnrichStrategy implements AggregationStrategy {
 
-    final static Logger logger = Logger.getLogger(AttachmentEnrichStrategy.class);
+    private static final Logger logger = Logger.getLogger(AttachmentEnrichStrategy.class);
 
     @Override
     public Exchange aggregate(Exchange original, Exchange resource) {
@@ -28,7 +28,7 @@ public class AttachmentEnrichStrategy implements AggregationStrategy {
         // In this case the main flow can keep going, but the error is logged to the log tab in Assimbly.
         try {
             resourceMessage = resource.getIn();
-        } catch (NullPointerException e){
+        } catch (NullPointerException _){
             NullPointerException exception = new NullPointerException("Assimbly could not get a response from your requested resource.");
             logger.error(exception.getMessage());
 
@@ -55,10 +55,10 @@ public class AttachmentEnrichStrategy implements AggregationStrategy {
             data = IOUtils.toByteArray(body);
         } catch (IOException e) { logger.error(e.getMessage()); }
 
-        logger.info(String.format("Adding attachment '%s' with mime type: '%s'", attachmentName, mimeType));
+        logger.info("Adding attachment '%s' with mime type: '%s'".formatted(attachmentName, mimeType));
 
         logger.info("Attachment details");
-        logger.info(String.format("\tsize: %s", data.length));
+        logger.info("\tsize: %s".formatted(data.length));
 
         dataHandler = new DataHandler(data, mimeType);
 
