@@ -1,13 +1,13 @@
 package org.assimbly.exceltoxml;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import tools.jackson.databind.ObjectMapper;
 import org.apache.camel.Exchange;
 import org.apache.camel.builder.RouteBuilder;
 import org.custommonkey.xmlunit.XMLUnit;
 import org.apache.camel.test.junit5.CamelTestSupport;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import tools.jackson.core.JacksonException;
 import org.assimbly.exceltoxml.domain.ExcelRule;
 
 import java.io.FileInputStream;
@@ -15,10 +15,10 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.*;
 
-import static org.custommonkey.xmlunit.XMLAssert.assertXMLEqual;
+import static org.xmlunit.assertj3.XmlAssert.assertThat;
 
 public class ExcelToXmlComponentTest extends CamelTestSupport {
 
@@ -61,7 +61,7 @@ public class ExcelToXmlComponentTest extends CamelTestSupport {
         for (String route : allRoutes.keySet()) {
             routeBuilders.add(
                 new RouteBuilder() {
-                    public void configure() throws JsonProcessingException {
+                    public void configure() throws JacksonException {
                         from("direct:" + route)
                             .to(createUri(allRoutes.get(route)))
                             .to("mock:result");
@@ -125,18 +125,19 @@ public class ExcelToXmlComponentTest extends CamelTestSupport {
 
     private void runTest(String rule) throws Exception {
         template.sendBody("direct:" + rule, input);
-        Exchange result = getMockEndpoint("mock:result").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:result").getExchanges().getFirst();
         String actual = result.getIn().getBody(String.class);
 
         String expected = readFile("src/test/resources/" + rule + ".xml", Charset.defaultCharset());
 
         XMLUnit.setIgnoreWhitespace(true);
-        assertXMLEqual(expected,actual);
+		
+		assertThat(actual).and(expected).areIdentical();
 
     }
 
     private String readFile(String path, Charset encoding) throws IOException {
-        byte[] encoded = Files.readAllBytes(Paths.get(path));
+        byte[] encoded = Files.readAllBytes(Path.of(path));
         return new String(encoded, encoding);
     }
 
@@ -151,7 +152,7 @@ public class ExcelToXmlComponentTest extends CamelTestSupport {
         try {
             String jsonArrayString = objectMapper.writeValueAsString(rules);
             return Base64.getEncoder().encodeToString(jsonArrayString.getBytes());
-        } catch (com.fasterxml.jackson.core.JsonProcessingException e) {
+        } catch (JacksonException e) {
             throw new RuntimeException("Error serializing rules to JSON", e);
         }
 
