@@ -5,34 +5,35 @@ import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.test.junit5.CamelTestSupport;
 import org.junit.jupiter.api.Test;
 
-
-import static org.custommonkey.xmlunit.XMLAssert.assertXMLEqual;
-
+import static org.xmlunit.assertj3.XmlAssert.assertThat;
 
 public class FormToXmlComponentTest extends CamelTestSupport {
 
     private final String encoding = "utf-8";
 
-    private final String expectedXml =
-            "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n" +
-            "<items>\n" +
-            "  <surname>Catalão</surname>\n" +
-            "  <name>Pedro</name>\n" +
-            "  <myage>36</myage>\n" +
-            "</items>";
+    private final String expected =
+            """
+            <?xml version="1.0" encoding="utf-8"?>
+            <items>
+              <surname>Catalão</surname>
+              <name>Pedro</name>
+              <myage>36</myage>
+            </items>""";
 
     private final String expectedXmlWithInvalidKeyNames =
-            "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n" +
-            "<items>\n" +
-            "  <city>Lisbon</city>\n" +
-            "</items>";
+            """
+            <?xml version="1.0" encoding="utf-8"?>
+            <items>
+              <city>Lisbon</city>
+            </items>""";
 
     private final String expectedXmlWithEmptyKeyValues =
-            "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n" +
-                    "<items>\n" +
-                    "  <surname>catalao</surname>\n" +
-                    "  <name></name>\n" +
-                    "</items>";
+            """
+            <?xml version="1.0" encoding="utf-8"?>
+            <items>
+              <surname>catalao</surname>
+              <name></name>
+            </items>""";
 
     @Override
     protected RouteBuilder createRouteBuilder() throws Exception {
@@ -51,10 +52,11 @@ public class FormToXmlComponentTest extends CamelTestSupport {
         String validFormData = "name=Pedro&surname=Catalão&myage=36";
         template.sendBody("direct:testRoute", validFormData);
 
-        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().get(0);
-        String body = result.getIn().getBody(String.class);
+        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().getFirst();
+        String actual = result.getIn().getBody(String.class);
 
-        assertXMLEqual(expectedXml, body);
+        assertThat(actual).and(expected).areIdentical();
+
     }
 
     @Test
@@ -62,11 +64,12 @@ public class FormToXmlComponentTest extends CamelTestSupport {
         String formDataInvalidCharacters = "name=Pedro&sur$naãme=Catalão&my age=36";
         template.sendBody("direct:testRoute", formDataInvalidCharacters);
 
-        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().getFirst();
 
-        String body = result.getIn().getBody(String.class);
+        String actual = result.getIn().getBody(String.class);
 
-        assertXMLEqual(expectedXml, body);
+        assertThat(actual).and(expected).areIdentical();
+
     }
 
     @Test
@@ -74,11 +77,12 @@ public class FormToXmlComponentTest extends CamelTestSupport {
         String formDataWithInvalidKeyNames = "38=Pedro&city=Lisbon";
         template.sendBody("direct:testRoute", formDataWithInvalidKeyNames);
 
-        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().getFirst();
 
-        String body = result.getIn().getBody(String.class);
+        String actual = result.getIn().getBody(String.class);
 
-        assertXMLEqual(expectedXmlWithInvalidKeyNames, body);
+        assertThat(actual).and(expectedXmlWithInvalidKeyNames).areIdentical();
+
     }
 
     @Test
@@ -86,10 +90,12 @@ public class FormToXmlComponentTest extends CamelTestSupport {
         String formDataEmptyKeyValues = "name=&surname=catalao=age&=";
         template.sendBody("direct:testRoute", formDataEmptyKeyValues);
 
-        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().getFirst();
 
-        String body = result.getIn().getBody(String.class);
+        String actual = result.getIn().getBody(String.class);
 
-        assertXMLEqual(expectedXmlWithEmptyKeyValues, body);
+        assertThat(actual).and(expectedXmlWithEmptyKeyValues).areIdentical();
+
     }
+
 }
