@@ -52,7 +52,7 @@ public class MailConvertersTest extends CamelTestSupport {
 
         MockEndpoint.assertIsSatisfied(context);
 
-        Message mailMessage = mock.getReceivedExchanges().get(0).getIn().getBody(MailMessage.class).getMessage();
+        Message mailMessage = mock.getReceivedExchanges().getFirst().getIn().getBody(MailMessage.class).getMessage();
         assertNotNull(mailMessage);
 
         String s = MailConverters.toString(mailMessage);
@@ -68,7 +68,7 @@ public class MailConvertersTest extends CamelTestSupport {
 
         MockEndpoint.assertIsSatisfied(context);
 
-        Message mailMessage = mock.getReceivedExchanges().get(0).getIn().getBody(MailMessage.class).getMessage();
+        Message mailMessage = mock.getReceivedExchanges().getFirst().getIn().getBody(MailMessage.class).getMessage();
         assertNotNull(mailMessage);
 
         InputStream is = MailConverters.toInputStream(mailMessage);
@@ -90,13 +90,13 @@ public class MailConvertersTest extends CamelTestSupport {
 
         MockEndpoint.assertIsSatisfied(context);
 
-        Message mailMessage = mock.getReceivedExchanges().get(0).getIn().getBody(MailMessage.class).getMessage();
+        Message mailMessage = mock.getReceivedExchanges().getFirst().getIn().getBody(MailMessage.class).getMessage();
         assertNotNull(mailMessage);
 
         Object content = mailMessage.getContent();
         assertIsInstanceOf(Multipart.class, content);
 
-        InputStream is = mock.getReceivedExchanges().get(0).getIn().getBody(InputStream.class);
+        InputStream is = mock.getReceivedExchanges().getFirst().getIn().getBody(InputStream.class);
         assertNotNull(is);
         assertEquals("Alternative World", context.getTypeConverter().convertTo(String.class, is));
     }
@@ -115,13 +115,13 @@ public class MailConvertersTest extends CamelTestSupport {
 
         MockEndpoint.assertIsSatisfied(context);
 
-        Message mailMessage = mock.getReceivedExchanges().get(0).getIn().getBody(MailMessage.class).getMessage();
+        Message mailMessage = mock.getReceivedExchanges().getFirst().getIn().getBody(MailMessage.class).getMessage();
         assertNotNull(mailMessage);
 
         Object content = mailMessage.getContent();
         assertIsInstanceOf(Multipart.class, content);
 
-        byte[] is = mock.getReceivedExchanges().get(0).getIn().getBody(byte[].class);
+        byte[] is = mock.getReceivedExchanges().getFirst().getIn().getBody(byte[].class);
         assertNotNull(is);
         assertEquals("Alternative World", context.getTypeConverter().convertTo(String.class, is));
     }
@@ -140,7 +140,7 @@ public class MailConvertersTest extends CamelTestSupport {
 
         MockEndpoint.assertIsSatisfied(context);
 
-        Message mailMessage = mock.getReceivedExchanges().get(0).getIn().getBody(MailMessage.class).getMessage();
+        Message mailMessage = mock.getReceivedExchanges().getFirst().getIn().getBody(MailMessage.class).getMessage();
         assertNotNull(mailMessage);
 
         Object content = mailMessage.getContent();
