@@ -1,5 +1,11 @@
 package org.assimbly.oauth2token.service;
 
+import java.io.*;
+import jakarta.ws.rs.*;
+
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
+
 import org.apache.commons.lang3.StringUtils;
 import org.apache.log4j.Logger;
 import org.assimbly.oauth2token.tenant.TenantVariableManager;
@@ -8,37 +14,37 @@ import org.json.JSONObject;
 import org.assimbly.auth.endpoint.annotation.Secured;
 import org.assimbly.tenantvariables.TenantVariablesProcessor;
 
-import jakarta.ws.rs.*;
-import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URL;
-import java.util.*;
+import java.util.Calendar;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Path("/")
 @Secured
 public class TokenService {
 
-    private static Logger logger = Logger.getLogger(TokenService.class);
+    private static final Logger log = Logger.getLogger(TokenService.class);
 
-    public static String OAUTH2_PREFIX = "oauth2_";
-    public static String OAUTH2_URI_TOKEN_SUFFIX = "_uri_token";
-    public static String OAUTH2_SCOPE_SUFFIX = "_scope";
-    public static String OAUTH2_CLIENT_ID_SUFFIX = "_client_id";
-    public static String OAUTH2_CLIENT_SECRET_SUFFIX = "_client_secret";
-    public static String OAUTH2_EXPIRE_DATE_SUFFIX = "_expire_date";
-    public static String OAUTH2_ACCESS_TOKEN_SUFFIX = "_access_token";
-    public static String OAUTH2_REFRESH_TOKEN_SUFFIX = "_refresh_token";
-    public static String OAUTH2_REFRESH_FLAG_SUFFIX = "_refresh_flag";
-    public static String OAUTH2_REDIRECT_URI_SUFFIX = "_redirect_uri";
-    public static String OAUTH2_CREDENTIALS_TYPE_URI_SUFFIX = "_credentials_type";
-    public static String OAUTH2_TOKEN_TENANT_VAR_SUFFIX = "_token_global_var";
+    public static final String OAUTH2_PREFIX = "oauth2_";
+    public static final String OAUTH2_URI_TOKEN_SUFFIX = "_uri_token";
+    public static final String OAUTH2_SCOPE_SUFFIX = "_scope";
+    public static final String OAUTH2_CLIENT_ID_SUFFIX = "_client_id";
+    public static final String OAUTH2_CLIENT_SECRET_SUFFIX = "_client_secret";
+    public static final String OAUTH2_EXPIRE_DATE_SUFFIX = "_expire_date";
+    public static final String OAUTH2_ACCESS_TOKEN_SUFFIX = "_access_token";
+    public static final String OAUTH2_REFRESH_TOKEN_SUFFIX = "_refresh_token";
+    public static final String OAUTH2_REFRESH_FLAG_SUFFIX = "_refresh_flag";
+    public static final String OAUTH2_REDIRECT_URI_SUFFIX = "_redirect_uri";
+    public static final String OAUTH2_CREDENTIALS_TYPE_URI_SUFFIX = "_credentials_type";
+    public static final String OAUTH2_TOKEN_TENANT_VAR_SUFFIX = "_token_global_var";
 
-    private static String SERVICE_PARAM_EXPIRES_IN = "expires_in";
-    private static String SERVICE_PARAM_ACCESS_TOKEN = "access_token";
-    private static String SERVICE_PARAM_REFRESH_TOKEN = "refresh_token";
-    private static String SERVICE_PARAM_ERROR = "error";
-    private static String SERVICE_PARAM_ERROR_DESCRIPTION = "error_description";
+    private static final String SERVICE_PARAM_EXPIRES_IN = "expires_in";
+    private static final String SERVICE_PARAM_ACCESS_TOKEN = "access_token";
+    private static final String SERVICE_PARAM_REFRESH_TOKEN = "refresh_token";
+    private static final String SERVICE_PARAM_ERROR = "error";
+    private static final String SERVICE_PARAM_ERROR_DESCRIPTION = "error_description";
 
     private static final String GOOGLE_CLIENT_ID = System.getenv("GOOGLE_CLIENT_ID");
     private static final String GOOGLE_CLIENT_SECRET = System.getenv("GOOGLE_CLIENT_SECRET");
@@ -86,7 +92,7 @@ public class TokenService {
 
         // prepare data to send
         String urlParameters  = "client_id="+(customCredentialsType ? clientId : GOOGLE_CLIENT_ID)+
-                (scope!=null && !scope.trim().equals("") ? "&scope="+scope : "")+
+                (scope!=null && !scope.trim().isEmpty() ? "&scope="+scope : "")+
                 "&redirect_uri="+redirectUri+
                 "&grant_type=authorization_code"+
                 "&client_secret="+(customCredentialsType ? clientSecret : GOOGLE_CLIENT_SECRET)+
@@ -152,7 +158,7 @@ public class TokenService {
 
             // prepare data to send
             String urlParameters  = "client_id="+(customCredentialsType ? clientId : GOOGLE_CLIENT_ID)+
-                    (scope!=null && !scope.trim().equals("") ? "&scope="+scope : "")+
+                    (scope!=null && !scope.trim().isEmpty() ? "&scope="+scope : "")+
                     "&redirect_uri="+redirectUri+
                     "&grant_type=refresh_token"+
                     "&client_secret="+(customCredentialsType ? clientSecret : GOOGLE_CLIENT_SECRET)+
@@ -177,7 +183,7 @@ public class TokenService {
             }
 
         } catch (Exception e) {
-            e.printStackTrace();
+            log.error("Error refresh token (oauth2)",e);
         } finally {
             // set refresh flag to inactive
             TenantVariableManager.saveTenantVariable(refreshFlagVarName, "0", tenant, environment);
@@ -187,79 +193,62 @@ public class TokenService {
         return accessToken;
     }
 
-    // call service
     private static void callService(
             Map<String, String> tokenInfoMap,
             String uriToken,
             String urlParameters
     ) {
-
-        HttpURLConnection con = null;
+        URI uri = URI.create(uriToken);
 
         try {
-            URL url = null;
-            InputStream stream = null;
-            String tokenInfoResp = null;
-
-            // prepare connection
-            url = new URL(uriToken);
-            con = (HttpURLConnection) url.openConnection();
+            URL url = uri.toURL();
+            HttpURLConnection con = (HttpURLConnection) url.openConnection();
             con.setDoOutput(true);
             con.setInstanceFollowRedirects(false);
             con.setRequestMethod("POST");
             con.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
             con.setUseCaches(false);
 
-            // get token info from uri_token service
-            OutputStreamWriter wr = new OutputStreamWriter(con.getOutputStream());
-            wr.write(urlParameters);
-            wr.flush();
+            try (OutputStreamWriter wr = new OutputStreamWriter(con.getOutputStream())) {
 
-            int codeResp = con.getResponseCode();
-            if (codeResp >= 200 && codeResp < 400) {
-                stream = con.getInputStream();
-            } else {
-                stream = con.getErrorStream();
-            }
+                wr.write(urlParameters);
+                wr.flush();
 
-            BufferedReader reader = new BufferedReader(new InputStreamReader(stream, "UTF-8"));
-            tokenInfoResp = reader.lines().collect(Collectors.joining(System.lineSeparator()));
+                int codeResp = con.getResponseCode();
+                InputStream stream = (codeResp >= 200 && codeResp < 400)
+                        ? con.getInputStream()
+                        : con.getErrorStream();
 
-            if (tokenInfoResp != null) {
-                JSONObject tokenInfoJson = new JSONObject(tokenInfoResp);
-                if (!tokenInfoJson.isNull(SERVICE_PARAM_ERROR)) {
-                    logger.info("tokenInfoResp > "+tokenInfoResp);
-                    String error = (
-                            tokenInfoJson.has(SERVICE_PARAM_ERROR) ? tokenInfoJson.getString(SERVICE_PARAM_ERROR) : ""
-                    );
-                    String errorDescription = (
-                            tokenInfoJson.has(SERVICE_PARAM_ERROR_DESCRIPTION) ?
-                                    tokenInfoJson.getString(SERVICE_PARAM_ERROR_DESCRIPTION) : ""
-                    );
-                    throw new OAuth2TokenException(error + " - " + errorDescription);
-                } else {
-                    // expire_date
-                    Calendar nowCal = Calendar.getInstance();
-                    int expiresIn = tokenInfoJson.getInt(SERVICE_PARAM_EXPIRES_IN);
-                    nowCal.add(Calendar.SECOND, expiresIn);
-                    // access_token
-                    String accessToken = tokenInfoJson.getString(SERVICE_PARAM_ACCESS_TOKEN);
-                    // refresh_token
-                    String refreshToken = tokenInfoJson.optString(SERVICE_PARAM_REFRESH_TOKEN);
-                    // add token info into hashmap
-                    tokenInfoMap.put(SERVICE_PARAM_EXPIRES_IN, String.valueOf(nowCal.getTimeInMillis()));
-                    tokenInfoMap.put(SERVICE_PARAM_ACCESS_TOKEN, accessToken);
-                    tokenInfoMap.put(SERVICE_PARAM_REFRESH_TOKEN, refreshToken);
+                try (BufferedReader reader = new BufferedReader(
+                        new InputStreamReader(stream, StandardCharsets.UTF_8))) {
+
+                    String tokenInfoResp = reader.lines()
+                            .collect(Collectors.joining(System.lineSeparator()));
+
+                    JSONObject tokenInfoJson = new JSONObject(tokenInfoResp);
+                    if (!tokenInfoJson.isNull(SERVICE_PARAM_ERROR)) {
+                        log.info("tokenInfoResp > " + tokenInfoResp);
+                        String error = tokenInfoJson.has(SERVICE_PARAM_ERROR)
+                                ? tokenInfoJson.getString(SERVICE_PARAM_ERROR) : "";
+                        String errorDescription = tokenInfoJson.has(SERVICE_PARAM_ERROR_DESCRIPTION)
+                                ? tokenInfoJson.getString(SERVICE_PARAM_ERROR_DESCRIPTION) : "";
+                        throw new OAuth2TokenException(error + " - " + errorDescription);
+                    } else {
+                        Calendar nowCal = Calendar.getInstance();
+                        int expiresIn = tokenInfoJson.getInt(SERVICE_PARAM_EXPIRES_IN);
+                        nowCal.add(Calendar.SECOND, expiresIn);
+                        String accessToken = tokenInfoJson.getString(SERVICE_PARAM_ACCESS_TOKEN);
+                        String refreshToken = tokenInfoJson.optString(SERVICE_PARAM_REFRESH_TOKEN);
+                        tokenInfoMap.put(SERVICE_PARAM_EXPIRES_IN, String.valueOf(nowCal.getTimeInMillis()));
+                        tokenInfoMap.put(SERVICE_PARAM_ACCESS_TOKEN, accessToken);
+                        tokenInfoMap.put(SERVICE_PARAM_REFRESH_TOKEN, refreshToken);
+                    }
                 }
             }
-
         } catch (IOException e) {
-            logger.error("Error calling the service, with the following parameters: "+urlParameters, e);
-        } finally {
-            if (con != null) {
-                con.disconnect();
-            }
+            log.error("Error calling the service, with the following parameters: " + urlParameters, e);
         }
+
     }
 
 }
