@@ -1,9 +1,10 @@
 package org.assimbly.sql.adapter;
 
 import com.informix.jdbc.IfxDriver;
-import org.apache.http.NameValuePair;
-import org.apache.http.client.utils.URLEncodedUtils;
-import org.apache.http.message.BasicNameValuePair;
+import org.apache.hc.core5.net.URLEncodedUtils;
+import org.apache.hc.core5.http.NameValuePair;
+import org.apache.hc.core5.http.message.BasicNameValuePair;
+import org.apache.hc.core5.net.WWWFormCodec;
 import org.assimbly.sql.domain.JDBCConnection;
 
 import java.nio.charset.StandardCharsets;
@@ -29,9 +30,9 @@ public class InformixAdapter implements DatabaseAdapter {
             );
         }
 
-        String query = URLEncodedUtils.format(parameters, ';', StandardCharsets.UTF_8);
+        String query = WWWFormCodec.format(parameters, StandardCharsets.UTF_8);
 
-        String url = String.format("jdbc:informix-sqli://%s:%s/%s:%s",
+        String url = "jdbc:informix-sqli://%s:%s/%s:%s".formatted(
                 connection.getHost(), connection.getPort(), connection.getDatabase(), query);
 
         DriverManager.setLoginTimeout(5);
