@@ -1,8 +1,8 @@
 package org.assimbly.sql.adapter;
 
-import org.apache.http.NameValuePair;
-import org.apache.http.client.utils.URLEncodedUtils;
-import org.apache.http.message.BasicNameValuePair;
+import org.apache.hc.core5.http.NameValuePair;
+import org.apache.hc.core5.http.message.BasicNameValuePair;
+import org.apache.hc.core5.net.WWWFormCodec;
 import org.assimbly.sql.domain.JDBCConnection;
 
 import java.nio.charset.StandardCharsets;
@@ -31,10 +31,9 @@ public class PostgresAdapter implements DatabaseAdapter {
             );
         }
 
-        String query = URLEncodedUtils.format(parameters, StandardCharsets.UTF_8);
+        String query = WWWFormCodec.format(parameters, StandardCharsets.UTF_8);
 
-        String url = String.format("jdbc:postgresql://%s:%s/%s?%s",
-                connection.getHost(), connection.getPort(), connection.getDatabase(), query);
+        String url = "jdbc:postgresql://%s:%s/%s?%s".formatted(connection.getHost(), connection.getPort(), connection.getDatabase(), query);
 
         DriverManager.setLoginTimeout(5);
         if(!registered) {
@@ -43,5 +42,7 @@ public class PostgresAdapter implements DatabaseAdapter {
         }
 
         return DriverManager.getConnection(url, connection.getUsername(), connection.getPassword());
+
     }
+
 }
