@@ -61,9 +61,10 @@ public class TenantVariablesTest extends CamelTestSupport {
             "]" +
             "}";
 
-    private final String BODY_MULTILINE_VALUE = "Multiline\n" +
-            "Body\n" +
-            "Test";
+    private final String BODY_MULTILINE_VALUE = """
+            Multiline
+            Body
+            Test""";
 
     private final String BASE64_HEADER_ONLY = "JHtoZWFkZXIuSGVhZGVyTmFtZX0=";
     private final String BASE64_BODY_ONLY = "JHtib2R5fQ==";
@@ -228,7 +229,7 @@ public class TenantVariablesTest extends CamelTestSupport {
 
         getMockEndpoint("mock:out").expectedMessageCount(1);
 
-        Exchange result = getMockEndpoint("mock:out").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:out").getExchanges().getFirst();
 
         assertNotNull(result.getIn().getHeader(HEADER_NAME_WITH_SPACE));
         assertEquals(VARIABLE_DEFAULT_VALUE, result.getIn().getHeader(HEADER_NAME_WITH_SPACE));
@@ -442,7 +443,7 @@ public class TenantVariablesTest extends CamelTestSupport {
 
         getMockEndpoint("mock:out").expectedMessageCount(1);
 
-        Exchange result = getMockEndpoint("mock:out").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:out").getExchanges().getFirst();
 
         assertEquals(VARIABLE_VALUE, result.getIn().getHeader(HEADER_NAME_WITH_SPACE));
     }
